change complete flag to ConfigInfo.Status.Done

--- a/config/config.json
+++ b/config/config.json
@@ -18,5 +18,8 @@
     "ShellCommend": {
         "AllureOpen": "allure open %~dp0",
         "AllureGenerate": "allure generate "
+    },
+    "Status": {
+        "Done": "Status.DONE"
     }
 }
